tests/ui/fail/skip/duplicate_getters_2.stderr
error: encountered duplicate `#[skip(getters)]`
 --> tests/ui/fail/skip/duplicate_getters_2.rs:5:15
  |
5 |     #[skip] #[skip(getters)]
  |               ^^^^

error: duplicate `#[skip(getters)]` here
 --> tests/ui/fail/skip/duplicate_getters_2.rs:5:7
  |
5 |     #[skip] #[skip(getters)]
  |       ^^^^
